[package]
name = "from_value_derive"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
serde_json = "1.0.66"
syn = { version = "1.0.75", features = ["extra-traits"]  }
proc-macro2 = "1.0.28"
