[package]
name = "from_value_derive"
version = "0.1.0"
edition = "2018"
homepage = "https://github.com/ptechen"
documentation = "https://github.com/ptechen/FromValue/blob/main/README.md"
repository = "https://github.com/ptechen/FromValue.git"
license = "MIT OR Apache-2.0"
#readme = "README.md"
description = "Rust structure to slice."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
serde_json = "1.0.66"
syn = { version = "1.0.75", features = ["extra-traits"]  }
proc-macro2 = "1.0.28"
